# html_to_markdown_rust

./: CHANGELOG.md  LICENSE  README.md  Taskfile.yaml  ffigen.yaml  pubspec.yaml
benchmark/: .gitignore  README.md  benchmarks.dart  html_test_data.dart  main.dart  pubspec.yaml
example/: example.dart  pubspec.yaml
hook/: build.dart
lib/: html_to_markdown_rust.dart
lib/src/: bindings.g.dart  conversion_options.dart  html_to_markdown.dart
rust/: Cargo.toml  build.rs  rust-toolchain.toml
rust/include/: bindings.h
rust/src/: lib.rs
test/: html_to_markdown_test.dart
