[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
html-to-markdown-rs = { version = "2.25.1", features = ["serde", "metadata", "inline-images"] }
serde_json = "1.0"
base64 = "0.22"

[build-dependencies]
build-target = "0.8.0"
cbindgen = "0.29.2"
